feat: cat-api.js

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="cat-info">
       <div class="cat-container"></div>
     </div>
-    <script src="cat-api.js" type="module"></script>
+    <script src="./cat-api.js" type="module"></script>
     <script src="index.js" type="module"></script>
   </body>
 </html>
